# flyboi

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
launch/: APM_DJI_Wrapper.launch  APM_SITL_Wrapper.launch  Crazyflie_Perfect_Trajectory.launch  Crazyflie_Robot_Single.launch  Crazyflie_Robot_Trajectory.launch  Crazyflie_Single_Follow.launch  Crazyflie_Trajectory_Follow.launch  Crazyflie_Wrapper_Single.launch  Crazyflie_Wrapper_Trajectory.launch  Sitl_Single_Path.launch  Sitl_Trajectory_Prediction.launch  Trajectory_Prediction.launch  mav_linear_mpc_crazyflie.launch  mav_linear_mpc_dji_flamewheel.launch  mav_linear_mpc_sitl.launch  mav_nonlinear_mpc_crazyflie.launch  mav_nonlinear_mpc_sitl.launch
launch/old/: Trajectory_Prediction.launch  single_mav_nonlinear_mpc_crazyflie.launch
msg/: Joyfilter.msg  pose_comparison.msg
scripts/: Circle_Path.py  Circle_Path_Perfect.py  Circle_Path_Perfect_Timer.py  Circle_Path_Timer.py  CrazyFlieWrapperNode.py  Crazyflie_Hover_Path.py  GroundRobotListen.py  Joystick_Control_Node.py  ListenPredict.py  ListenPredict_perferct.py  Odometry_Conversion.py  Oscilate_Path.py  Single_Topic_Traj.py  Square_Path.py  Square_Path_Perfect.py  System_ID_Path.py  TrajectoryTest.py  path_python.py  path_python_single.py  path_python_traj.py
src/: Command_Conversion.cpp  Crazyflie_PID_Node.cpp  Mavros_Command_Test.cpp  Odometry_Conversion.py  circle_waypoint.py  path_creation.cpp  path_python.py  pid.hpp  px4_hover.cpp  store_memory.py  takeoff_initialize.cpp  takeoff_initialize_old.cpp  takeoff_land_erle.cpp
srv/: CrazyfliePID.srv
(+35 files in other folders)
