<?xml version="1.0"?>
<package format="2">
  <name>flyboi_ethz</name>
  <version>0.0.0</version>
  <description>The flyboi package</description>

  <maintainer email="konglab@todo.todo">konglab</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <exec_depend>numpy</exec_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>  
  <exec_depend>numpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>



  <!-- stuff from mavros              -->
  <depend>mavros</depend>
  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>urdf</depend>
  <depend>tf</depend>

 <!-- Stuff for ETZH Zurich -->
  <depend>tf2</depend>
  <depend>mav_msgs</depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
